// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`slideover > renders with actions slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if-->Actions slot<button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with body slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class="">Body slot</div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with bottom side correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="bottom" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with bottom side inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="bottom" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" class="bg-elevated" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if-->Close slot
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with closeIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with content slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>Content slot</div>



<!--teleport end-->"
`;

exports[`slideover > renders with default slot correctly 1`] = `
"Default slot
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="akar-dialog-content-v-0" role="dialog" aria-describedby="akar-dialog-description-v-2" aria-labelledby="akar-dialog-title-v-1" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-1"></h2><p id="akar-dialog-description-v-2"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><!--v-if--></span>
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description slot</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with footer slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <div data-slot="footer" class="">Footer slot</div>
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with header slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">Header slot</div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with left side correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="left" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with left side inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="left" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with open correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with right side correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with right side inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><!--v-if--><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <!--v-if-->
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><!--v-if--><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title slot</h2>
      <!--v-if-->
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with top side correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="top" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with top side inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="top" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0"></h2><p id="akar-dialog-description-v-1"></p></span>
  <div data-slot="header" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class="end-2"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div>
    <!--v-if-->
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders without overlay correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!--v-if-->
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;

exports[`slideover > renders without transition correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <!--v-if-->
  <div data-slot="header" class="">
    <div data-slot="wrapper" class="">
      <h2 id="akar-dialog-title-v-0" data-slot="title" class="">Title</h2>
      <p id="akar-dialog-description-v-1" data-slot="description" class="">Description</p>
    </div><button type="button" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
  <div data-slot="body" class=""></div>
  <!--v-if-->
</div>



<!--teleport end-->"
`;
